--- a/css/main.css
+++ b/css/main.css
@@ -461,6 +461,13 @@ nav a{
     overflow: hidden;
     position: relative;
 }
+.portfolio-box p{
+    display: -webkit-box;
+    -webkit-line-clamp: 0;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    color: black;
+}
 
 .portfolio-box::after{
     content: '';
@@ -468,14 +475,14 @@ nav a{
     left: 0px;
     top: 100%;
     width: 100%;
-    height: 100%;
+    height: 75%;
     background: linear-gradient(180deg, rgba(0,0,0,0) 0%, black 100%);
     transition: all ease 0.3s;
 }
 
-.portfolio-box img{
+.portfolio-box img {
     width: 100%;
-    height: 100%;
+    height: 76%;
     object-fit: cover;
     object-position: center;
 }
@@ -483,7 +490,7 @@ nav a{
 .portfolio-box a {
     position: absolute;
     left: 185px;
-    top: 50%;
+    top: 69%;
     transform: translate(-50%, -50%);
     color: black;
     background-color: yellow;
