--- a/css/main.css
+++ b/css/main.css
@@ -125,16 +125,16 @@ nav a{
   }
   .image1 {
     position: absolute;
-    top: 42px;
-    left: -381px;
+    top: 357px;
+    left: 173px;
     width: 644px;
-  }
+}
   .image2 {
-    position: absolute;
+    position: relative;
     top: -49px;
-    left: 332px;
+    left: 1px;
     width: 537px;
-  }
+}
 
 
 /*=============Expert=======================*/
